overflow bug fix

--- a/css/general.css
+++ b/css/general.css
@@ -80,6 +80,7 @@ Default: 9px
 html {
   font-size: 62.5%; /* 10px / 16px = 0.625 * 100% = 62.5% */
   /* Percentage of user's browser font-size setting */
+  overflow-x: hidden;
 }
 
 /* BODY STYLES */
