--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ Big: 18px
   height: 9.6rem; /* Adding height because we want to make the header sticky later */
   padding-left: 4.8rem;
   padding-right: 4.8rem;
+  position: relative;
 }
 /* .logo {
   height: 2.2rem;
